# sopher.ai

./: .auto-claude-status  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  BUGS.md  CHANGES.md  CLAUDE.md  CNAME  OAUTH_FIX_SUMMARY.md  PULL_REQUEST.md  README.md  SECURITY_AUDIT.md  TODO.md  index.html  oauth-secret-backup-20250819-185237.yaml  oauth-secret-backup-20250819-185315.yaml  prompt.xml  test-sse-streaming.sh  test-streaming.sh  vercel.json
.auto-claude/specs/003-projects-page-becomes-default/: complexity_assessment.json  context.json  implementation_plan.json  project_index.json  requirements.json  spec.md  (+2 more)
.claude/agents/: backend-api-architect.md  fullstack-test-engineer.md  k8s-deployment-engineer.md  langchain-orchestrator.md  react-ai-frontend-expert.md
.github/: SETUP_SECRETS.md
.github/codeql/: codeql-config.yml
.github/lighthouse/: lighthouserc.js
.github/workflows/: ci.yml  claude-code-review.yml  path-filter.yml  performance.yml  vercel-deploy.yml
backend/: .coverage 2  .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/.claude/: ralph-loop.local.md
backend/alembic/: README.md  alembic.ini  env.py
backend/alembic/versions/: 001_add_user_table_and_session_foreign_key.py
backend/app/: __init__.py  cache.py  config.py  db.py  errors.py  logging.py  main.py  metrics.py  middleware.py  models.py  oauth.py  pricing.py  schemas.py  security.py  workos_sso.py
backend/app/agents/: __init__.py  agents.py  base.py  dialogue_enhancer.py  genre_templates.py  orchestrator.py  plot_structures.py  scene_generator.py  style_profiles.py  voice_profiles.py
backend/app/agents/genres/: __init__.py  fantasy.py  mystery.py  romance.py  thriller.py
backend/app/agents/prompts/: __init__.py  concept.py  continuity.py  editor.py  outline.py  writer.py
backend/app/middleware/: __init__.py  rate_limiting.py  request_id.py
backend/app/monitoring/: __init__.py  error_tracker.py
backend/app/routers/: __init__.py  auth.py  chapters.py  continuity.py  editing.py  export.py  outline.py  projects.py  usage.py
backend/app/services/: __init__.py  chapter_service.py  character_bible.py  content_filter.py  continuity_service.py  editing_service.py  export_docx.py  export_epub.py  export_pdf.py  human_eval.py  manuscript_assembly.py  pacing_analyzer.py  parallel_writer.py  project_service.py  quality_gates.py  quality_metrics.py  recovery.py  scaling.py  style_learning.py  suggestion_service.py  token_optimizer.py
backend/app/services/exporters/: __init__.py  base.py  markdown.py  text.py
backend/app/workers/: __init__.py  job_queue.py
backend/docs/: authentication-middleware.md  oauth-configuration.md
backend/tests/: conftest.py  test_api_contract.py  test_auth.py  test_cache.py  test_chapter_endpoints.py  test_chapter_service.py  test_character_bible.py  test_config.py  test_content_filter.py  test_continuity_endpoints.py  test_continuity_service.py  test_cookie_domains.py  test_db.py  test_dialogue_enhancer.py  test_editing_endpoints.py  test_editing_service.py  test_error_tracker.py  test_errors.py  test_exception_handlers.py  test_export_endpoints.py  test_exporters.py  test_fantasy_features.py  test_fixtures.py  test_genre_templates.py  test_human_eval.py  test_job_queue.py  test_logging_module.py  test_main_app.py  test_manuscript_assembly.py  test_metrics.py  test_middleware.py  test_mystery_features.py  test_oauth_cookies.py  test_oauth_unit.py  test_openapi_schema.py  test_outline_endpoints.py  test_outline_schemas.py  test_pacing_analyzer.py  test_parallel_generation.py  test_parallel_writer.py  (+21 more)
backend/tests/integration/: __init__.py  test_api_validation.py  test_auth_flow.py  test_full_workflow.py  test_health_endpoints.py  test_project_lifecycle.py
backend/tests/load/: __init__.py  test_load.py
backend/tests/security/: __init__.py  test_security_audit.py
backend/tests/test_agents/: test_base.py  test_orchestrator.py
doc/: REFACTOR.md
docs/: GCP_SETUP.md  README.md  ci-build-failure.md  oauth-fix-guide.md  oauth-production-fix.md  oauth-redirect-fix.md  oauth-setup.md  production-oauth-setup.md
frontend/: Dockerfile  Dockerfile.dev  middleware.ts  next.config.js  package-lock 2.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: auth.test.ts  chapter-editor.test.tsx  chapter-generation-page.test.tsx  chapter-nav.test.tsx  continuity-dashboard.test.tsx  editing-dashboard.test.tsx  export-page.test.tsx  genre-template-selector.test.tsx  inline-suggestions.test.tsx  manuscript-preview.test.tsx  new-project-page.test.tsx  outline-editor-page.test.tsx  outline-preview.test.tsx  project-detail-page.test.tsx  projects-page.test.tsx  style-customization-panel.test.tsx  zustand.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BackgroundEffects.tsx  ChapterEditor.tsx  ChapterNav.tsx  GenreTemplateSelector.tsx  InlineSuggestions.tsx  ManuscriptPreview.tsx  OutlinePreview.tsx  StyleCustomizationPanel.tsx
frontend/e2e/: auth.spec.ts  navigation.spec.ts
frontend/lib/: auth.ts  zustand.test.ts  zustand.ts
frontend/public/: .gitkeep  robots.txt
frontend/tests/: color-contrast.test.js  error-display.test.js
infra/: .env.example  .env.production.template  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  prometheus.yml  traefik.yml
infra/k8s/: api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  web-deployment.yaml  web-service.yaml
infra/monitoring/: alerts.yml  prometheus.yml
infra/nginx/: nginx.conf
infra/postgres/: pg_hba.conf  postgresql.conf
infra/redis/: redis.conf
router/: litellm.config.yaml
scripts/: fix-oauth-production.sh  force-redeploy.sh  setup-gcp-service-account.sh
(+19 files in other folders)
